--- a/laaheg wep/privacy.html
+++ b/laaheg wep/privacy.html
@@ -87,14 +87,16 @@
   </main>
 
   <footer class="main-footer" style="text-align:center; padding: 1rem; background-color:#f9f9f9;">
-    <p>© 2025 لاحق | جميع الحقوق محفوظة</p>
-    <div style="margin-top: 0.5rem;">
-      <a href="https://twitter.com/laaheg" target="_blank">تويتر</a> |
-      <a href="https://instagram.com/laaheg" target="_blank">إنستغرام</a> |
-      <a href="payment_policy.html">سياسة الدفع</a>
-    </div>
-  </footer>
-  
+  <p>© 2025 لاحق | جميع الحقوق محفوظة</p>
+  <div style="margin-top: 0.5rem;">
+    <a href="https://twitter.com/laaheg" target="_blank">تويتر</a> |
+    <a href="https://instagram.com/laaheg" target="_blank">إنستغرام</a> |
+    <a href="payment_policy.html">سياسة الدفع</a> |
+    <a href="refund.html">سياسة الاسترجاع</a> |
+    <a href="privacy.html">سياسة الخصوصية</a> |
+    <a href="terms.html">الشروط والأحكام</a>
+  </div>
+</footer>
 
 </body>
 </html>
