--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.laaheg.com" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="2; url=https://www.laaheg.com" />
     <title>Redirecting...</title>
+    <script>
+      setTimeout(function() {
+        window.location.href = "https://www.laaheg.com";
+      }, 2000);
+    </script>
   </head>
   <body>
-    <p>Redirecting to <a href="https://www.laaheg.com">www.laaheg.com</a>...</p>
+    <p>🔁 سيتم توجيهك تلقائيًا إلى <a href="https://www.laaheg.com">www.laaheg.com</a>...</p>
   </body>
 </html>
