--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=https://www.laaheg.com" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>سيتم تحويلك تلقائيًا إلى <a href="https://www.laaheg.com">www.laaheg.com</a></p>
-  </body>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="1; url=https://www.laaheg.com" />
+  <title>جارٍ تحويلك...</title>
+  <style>
+    body {
+      background-color: #f9f6fc;
+      font-family: 'Cairo', sans-serif;
+      text-align: center;
+      margin-top: 20%;
+      color: #444;
+    }
+    a {
+      color: #87407b;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <h2>🔁 سيتم توجيهك تلقائيًا إلى <a href="https://www.laaheg.com">www.laaheg.com</a></h2>
+  <p>إذا لم يتم تحويلك، اضغط على الرابط أعلاه.</p>
+</body>
 </html>
