--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="1; url=https://www.laaheg.com" />
+  <meta charset="UTF-8">
   <title>جارٍ تحويلك...</title>
+  <script>
+    window.location.replace("https://www.laaheg.com");
+  </script>
   <style>
     body {
       background-color: #f9f6fc;
       font-family: 'Cairo', sans-serif;
       text-align: center;
-      margin-top: 20%;
+      padding-top: 20%;
       color: #444;
     }
     a {
       color: #87407b;
-      text-decoration: none;
       font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h2>🔁 سيتم توجيهك تلقائيًا إلى <a href="https://www.laaheg.com">www.laaheg.com</a></h2>
-  <p>إذا لم يتم تحويلك، اضغط على الرابط أعلاه.</p>
+  <h2>🔁 يتم توجيهك الآن إلى <a href="https://www.laaheg.com">www.laaheg.com</a></h2>
+  <p>إذا لم يتم التحويل تلقائيًا، اضغط على الرابط أعلاه.</p>
 </body>
 </html>
